--- a/css.css
+++ b/css.css
@@ -1,40 +1,99 @@
-body{
+body {
     margin: 0;
     padding: 0;
+    position: fixed;
 }
-.principal{
+
+.principal {
+
     margin-top: 8%;
     margin-left: 5%;
-    margin-right:5%;
-    margin-bottom:5%;
-    
+    margin-right: 5%;
+    margin-bottom: 5%;
+
 }
-.cabecalho{
-   
+
+.cabecalho {
+    font-size: 20px;
+    position: fixed;
     display: flex;
-    margin-bottom:5%;
+    top: 0;
     height: 10%;
     width: 100%;
-    top: 0;
-    background-color:lightblue ;
-    position: fixed;
-    align-items: center;
-    justify-content: space-between;
-    
-   
 }
-.cabecalho p{
+
+.cabecalho header {
+    display: flex;
+    background-color: skyblue;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+
+}
+
+.cabecalho p {
     margin-left: 5%;
 }
 
-.rodapé{
-    
+
+.menu ul {
+    position: fixed;
+    width: 100%;
+    height: 10%;
+    top: 0;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: flex;
+    margin-left: 62%;
+
+    align-items: center;
+
+
+}
+
+.menu ul li {
+    margin-left: 2%;
+}
+
+.conteudo {
+    flex: 1;
+    margin-left: 1%;
+}
+
+.menu-lateral ul {
+    background-color: palegreen;
+    width: 15%;
+    position: fixed;
+    margin-left: 5%;
+    height: 75%;
+    top: 0;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    right: 0;
+   margin-top: 5.2%;
+
+}
+.menu-lateral ul header {
+    font-size: 20px;
+
+}
+.menu-lateral ul il{
+   
+}
+
+
+
+
+.rodapé {
+    font-size: 20px;
     height: 10%;
     background-color: lightsalmon;
     width: 100%;
     position: fixed;
     display: flex;
-    justify-content: center;  
-    align-items: center;      
+    justify-content: center;
+    align-items: center;
     bottom: 5%;
 }
