--- a/prova-1/Código Inicial da Prova 1 - HTML e CSS/css/style.css
+++ b/prova-1/Código Inicial da Prova 1 - HTML e CSS/css/style.css
@@ -42,7 +42,11 @@ nav a{
     padding: 5px 10px
 }
 .produtos{
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px,1fr));
+    gap: 1rem;
+    padding: 2rem;
+    
 }
 .produto-card{
     background-color: #f9f9f9;
@@ -77,8 +81,8 @@ footer{
     background-color: #333;
     color: white;
     padding: 1rem;
-    position: fixed;
-    bottom: 0;
+    display: flex;
+    justify-content: center;
     width: 100%;
     text-align: center;
 }
